kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pk-bkd-ms-api-stuart
  namespace: stuart
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/preserve-host: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - stuart.prokicon.com
      secretName: stuart-tls
  rules:
    - host: stuart.prokicon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pk-bkd-ms-api-stuart
                port:
                  number: 80
